src/app/components/code-block/code-block.scss
@import '../../styles/colors';

.odCodeBlock {

  .blockCard {
    margin: 0;
  }
  .flagCard {
    margin-right: 12px;
  }

  .blockTable {
    border-collapse: collapse;
    width: 100%;
  }

  .currentLine {
    background-color: $color-primary-light-4;
  }

  .codeLine:focus {
    outline: none;
  }

  .codeLine {
    .iconCol {
      width: 18px; // Width of arrow icon
      outline: none;
    }
    .midCol {
      width: 20px;
      outline: none;
      vertical-align: top;
    }
    .editCol {
      border: 1px solid $color-grey-med;
      border-right: none;
      box-shadow: inset 1px 1px 0px 0px $color-grey-med;
    }

    pre code {
      white-space: pre-wrap;
    }
    .blockComment pre code {
      color: $color-green-comment;
    }
  }

  .spacer {
    position: relative;
    width: 18px;
    height: 17px;
  }
  .icon {
    font-size: 12px;
    color: $color-accent;
    position: absolute;
  }
  .icon.ghostIcon {
    color: $color-grey-darker;
  }

  .currentLine {
    .icon.ghostIcon {
      color: $color-primary;
    }
    .icon.fade {
      opacity: 0.4;
    }
  }
  .icon.active {
    color: $color-green;
  }
  .line-icon {
    font-size: 12px;
    color: $color-text-med;
    z-index: 100;
  }
  .lineNumbers{
    margin: 0;
    text-align: right;
    margin-right: 3px;
  }
}

